@@ -960,6 +960,8 @@ LinkSymbols LinkSymbols::singleton = LinkSymbols();
 static AccessorTable LinkSTable[] =
 {
     //name,                     rettype,                        setorget,     var,              numindex,      params
+    { "getEaten",                   ScriptParser::TYPE_FLOAT,         GETTER,       LINKEATEN,                1,      {  ScriptParser::TYPE_LINK,         -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
+    { "setEaten",                   ScriptParser::TYPE_VOID,          SETTER,       LINKEATEN,                1,      {  ScriptParser::TYPE_LINK,          ScriptParser::TYPE_FLOAT,        -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
     { "getX",                   ScriptParser::TYPE_FLOAT,         GETTER,       LINKX,                1,      {  ScriptParser::TYPE_LINK,         -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
     { "setX",                   ScriptParser::TYPE_VOID,          SETTER,       LINKX,                1,      {  ScriptParser::TYPE_LINK,          ScriptParser::TYPE_FLOAT,        -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
     { "getY",                   ScriptParser::TYPE_FLOAT,         GETTER,       LINKY,                1,      {  ScriptParser::TYPE_LINK,         -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
